--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "zlib": "^1.0.5"
   },
   "dependencies": {
-    "global": "^4.4.0"
+    "add": "^2.0.6",
+    "global": "^4.4.0",
+    "once": "^1.4.0"
   }
 }
