update package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crypto-js-wasm",
+  "name": "@originjs/crypto-js-wasm",
   "version": "1.0.0-beta0",
   "description": "An alternate to crypto-js implemented with WebAssembly and ESM",
   "main": "lib/index.js",
