--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@originjs/crypto-js-wasm",
   "version": "1.0.0",
-  "description": "An alternate to crypto-js implemented with WebAssembly and ESM",
+  "description": "An alternative to crypto-js implemented with WebAssembly and ESM",
   "main": "lib/index.js",
   "files": ["lib"],
   "scripts": {
