--- a/rust/rsa/Cargo.toml
+++ b/rust/rsa/Cargo.toml
@@ -12,8 +12,11 @@ default = ["console_error_panic_hook"]
 
 [dependencies]
 wasm-bindgen = "0.2.63"
-sha2 = "0.10.2"
 rsa = "0.6.1"
+md-5 = "0.10.1"
+sha1 = "0.10.0"
+sha2 = "0.10.2"
+ripemd = "0.1.1"
 der = "0.5.0"
 base64 = "0.13.0"
 
