--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@originjs/crypto-js-wasm",
-  "version": "1.1.0-beta0",
+  "version": "1.1.0-beta1",
   "description": "An alternative to crypto-js implemented with WebAssembly and ESM",
   "main": "lib/index.js",
   "files": [
-    "lib"
+    "lib",
+    "types"
   ],
   "scripts": {
     "build": "npm run clean && node build/build.js",
@@ -14,6 +15,7 @@
     "lint": "eslint src test",
     "lint-fix": "eslint --fix src test"
   },
+  "types": "types/index.d.ts",
   "lint-staged": {
     "*.js": [
       "eslint --fix",
